[package]
name = "uair"
version = "0.5.1"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2021"
description = "An extensible pomodoro timer"
license = "MIT"
repository = "https://github.com/metent/uair/"
keywords = ["pomodoro", "timer", "countdown", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.10"
async-io = "1.12.0"
async-net = "1.7.0"
bincode = "1.3.3"
futures-lite = "1.12.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.15"
signal-hook-async-std = "0.2.2"
thiserror = "1.0.38"
toml = "0.7.2"
winnow = "0.3.0"
