[package]
name = "uair"
version = "0.6.1"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2021"
description = "An extensible pomodoro timer"
license = "MIT"
repository = "https://github.com/metent/uair/"
keywords = ["pomodoro", "timer", "countdown", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.12"
async-io = "2.2.1"
async-net = "2.0.0"
bincode = "1.3.3"
futures-lite = "2.0.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
signal-hook = "0.3.17"
signal-hook-async-std = "0.2.2"
simplelog = "0.12.1"
thiserror = "1.0.50"
toml = "0.8.8"
winnow = "0.5.19"
