[package]
name = "uair"
version = "0.6.3"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2021"
description = "An extensible pomodoro timer"
license = "MIT"
repository = "https://github.com/metent/uair/"
keywords = ["pomodoro", "timer", "countdown", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.13"
async-io = "2.4.0"
async-net = "2.0.0"
async-process = "2.3.0"
async-signal = "0.2.10"
bincode = "1.3.3"
futures-lite = "2.6.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_ignored = "0.1.10"
simplelog = "0.12.2"
thiserror = "2.0.11"
toml = "0.8.19"
winnow = "0.7.0"

[dev-dependencies]
testing_logger = "0.1"
