[package]
name = "uair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bincode = "1.3.3"
config = "0.13.1"
futures-lite = "1.12.0"
humantime = "2.1.0"
seahorse = "2.1.0"
smol = "1.2.5"
