[package]
name = "uair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.58"
argwerk = "0.20.1"
bincode = "1.3.3"
config = "0.13.1"
futures-lite = "1.12.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.138", features = ["derive"] }
smol = "1.2.5"
