[package]
name = "uairctl"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2021"
description = "Command-line interface for controlling uair"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
argwerk = "0.20.1"
anyhow = "1.0.58"
bincode = "1.3.3"
